<?xml version="1.0"?>
<package format="2">
  <name>sensorglove_sy_gripper</name>
  <version>0.0.0</version>
  <description>The sensorglove_sy_gripper package</description>

  <maintainer email="suhan@todo.todo">suhan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
